Upgraded documentation to new format Added overlays documentation

--- a/doc/2.Scenes/1.Overview.md
+++ b/doc/2.Scenes/1.Overview.md
@@ -1,6 +1,6 @@
 #Overview page
 
-![DemoXPO Scene](/Doc/Scenes/images/DemoXPO_Scene.png "DemoXPO Scene")
+![DemoXPO Scene](/Doc/2.Scenes/images/DemoXPO_Scene.png "DemoXPO Scene")
 
 ####All
 When ‘All’ is selected all available scene files will be shown on the overview page.
@@ -19,7 +19,7 @@ When ‘Unlabeled’ is selected the scene files that not have been labeled yet 
 When ‘Favorite’ is selected all scenes files that are marked as favorite will be displayed. <br>
 No matter which favorite folder they belong too.
 
-![DemoXPO Sort](/Doc/Scenes/images/sort.png "DemoXPO Sort")
+![DemoXPO Sort](/Doc/2.Scenes/images/sort.png "DemoXPO Sort")
 <br><br>
 
 ####Add scene
@@ -27,7 +27,7 @@ When you click on the ‘Add Scene’ button a small window will pop-up allowing
  You can click on the ‘Choose file’ button to browse to your folders on your pc and select the desired file(s) by hand. <br>
  Or you can ‘drag and drop’ the file(s) to the Add Scene window and the upload process will begin automatically.
 
-![Add Scene](/Doc/Scenes/images/Add_Scene.png "Add Scene")
+![Add Scene](/Doc/2.Scenes/images/Add_Scene.png "Add Scene")
 <br><br>
 
 ####Labels
@@ -35,7 +35,7 @@ On the left side of the Scene Overview page the available labels for the Scenes 
 The labels can be managed in the admin panel. When clicking on a label the corresponding scene files will be shown. You can drag and drop a label <br>
 on top of a scene file to assign that label to a specific scene file.
 
-![Labels](/Doc/Scenes/images/Labels.png "Labels")
+![Labels](/Doc/2.Scenes/images/Labels.png "Labels")
 <br><br>
 
 ####Label Search
@@ -58,7 +58,7 @@ The ‘Select All’ buttons selects all available scene files. This can be used
 This changes the way how the thumbnails of the scene files are displayed. You can either choose between small, large or list view. <br>
 The standard settings can be altered in the admin panel.
 
-![Display Type](/Doc/Scenes/images/displaytype.png "Display Type")
+![Display Type](/Doc/2.Scenes/images/displaytype.png "Display Type")
 <br><br>
 
 ####Search
@@ -95,12 +95,12 @@ You can create multiple favorite folders to store your favorite scenes. Click on
 You can drag and drop scene files to the newly created folder. The available folders will be shown in the bottom right corner of the screen.<br>
  There can be up to six favorite folders per user account.
 
-![Favorite Folders](/Doc/Scenes/images/favorite_folders.png "Favorite Folders")
+![Favorite Folders](/Doc/2.Scenes/images/favorite_folders.png "Favorite Folders")
 <br><br>  
 
 ####Properties filter
 The Properties Filter is displayed in the bottom left corner of the screen. The Properties filter shows all available properties that are marked as ‘Show in overview’.<br>
  You could use the properties filter to search files based on the properties.
 
-![Properties Filter](/Doc/Scenes/images/properties_filter.png "Properties Filter")  
+![Properties Filter](/Doc/2.Scenes/images/properties_filter.png "Properties Filter")  
  
