--- a/doc/6.Projects/1.Overview.md
+++ b/doc/6.Projects/1.Overview.md
@@ -1,5 +1,7 @@
 #Overview
 
+This are all the different options in the image overview.
+
 ####All
 When ‘All’ is selected all available projects will be shown on the overview page.
 <br/><br/>
@@ -28,7 +30,7 @@ On the left side of the Project Overview page the available labels for the proje
 root and sub labels. The labels can be managed in the admin panel. When clicking on a label the corresponding project will be shown. <br/>
 You can drag and drop a label on top of an scene file to assign that label to a specific project.
 
-![Labels](/Doc/Projects/images/Labels.png "Labels")
+![Labels](/Doc/6.Projects/images/Labels.png "Labels")
 <br/><br/>
 
 ####Label Search
@@ -50,7 +52,7 @@ The ‘Select All’ buttons selects all available projects. This can be used, f
 This changes the way the thumb image of the projects are displayed. You can either choose between small, large or list view. <br/>
 The standard settings can be altered in the admin panel.
 
-![Display Type](/Doc/Projects/images/displaytype.png "Display Type")
+![Display Type](/Doc/6.Projects/images/displaytype.png "Display Type")
 <br/><br/>
 
 ####Search
@@ -58,7 +60,7 @@ When you click on the small search icon you can enter the name or a part of the 
 Results matching the search criteria will pop-up instantly. The search results are not limited by just the filename.<br/>
 You can even search for a word used in a label corresponding to a project, words that are used in the description or in the properties.
 
-![Search](/Doc/Projects/images/search.png "Search")
+![Search](/Doc/6.Projects/images/search.png "Search")
 <br/><br/>
 
 ####File Information
@@ -85,11 +87,11 @@ You can create multiple favorite folders to store your favorite projects in. Cli
  You can now drag and drop projects to the newly created folder. The available folders will be shown in the bottom right corner of the screen. <br>
  There can be up to six favorite folders per user account.
 
-![Favorite Folders](/Doc/Projects/images/Favorite_Folders.png "Favorite Folders")
+![Favorite Folders](/Doc/6.Projects/images/Favorite_Folders.png "Favorite Folders")
 <br/><br/>
 
 ####Properties filter
 The Properties Filter is displayed in the bottom left corner of the screen. The Properties filter shows all available properties that are marked as ‘Show in overview’.<br>
  The you can use the properties filter to search files based on the properties.
 
-![Properties Filter](/Doc/Projects/images/Properties_Filter.png "Properties Filter")
+![Properties Filter](/Doc/6.Projects/images/Properties_Filter.png "Properties Filter")
