--- a/doc/7.Admin Panel/1.Global Settings.md
+++ b/doc/7.Admin Panel/1.Global Settings.md
@@ -1,5 +1,7 @@
 #Global Settings
 
+This page is used to manage the different settings in the PicarioXPO system.
+
 ####Customization Settings
 Add or change the logo in the top left corner of your PicarioXPO version by uploading a logo. This feature works best for PNG files.<br/>
 Change the header color and the text color by clicking in the colored box and selecting a different color from the color chart. <br/>
