--- a/doc/9.Render API/1.Scenes.md
+++ b/doc/9.Render API/1.Scenes.md
@@ -1,6 +1,6 @@
-# XPO Render API
+# XPO Render API Scenes
 
-XPO uses a render API that to render scenes.<br/>
+XPO uses the Render API to render scenes.<br/>
 Using a specific url you can customize the way the scene is rendered.
 
 ## Query parameters
@@ -9,7 +9,7 @@ Using a specific url you can customize the way the scene is rendered.
 |:------------- |:-------- |:------------------------------------------------------------------------------------------------ |:------------------------------------------------- |
 |width *		| double   | The width of the rendered image.  																  |									 				  |
 |height **      | double   | The height of the rendered image. 																  |													  |
-|format         | string   | The format of the rendered image. 																  |jpg or png  						 				  |
+|format         | string   | The format of the rendered image. 																  | jpg or png  						 			  |
 |p.jsonName     | string   | The name of the variable the should be returned <br />to the caller when requesting coordinates. | 								  				  |
 |p.objectthumb  | int      | The id of the object of the scene. 															  | Ranges from 0 to the max objects of the scene - 1 |
 |p.frame        | int      | The id of the frame, for a multiframe scene. <br />Default is 1. 								  | Ranges from 1 to max frame number 				  |
