--- a/doc/9.Render API/2.Colors.md
+++ b/doc/9.Render API/2.Colors.md
@@ -1,6 +1,6 @@
-# XPO Render API
+# XPO Render API Colors
 
-XPO uses a render API that to render colors on scenes.<br/>
+XPO uses the Render API to render colors on scenes.<br/>
 Using a specific url you can customize the way the color is rendered on the scene.
 
 ## Query parameters
