--- a/doc/5.Designer/1.Scenes.md
+++ b/doc/5.Designer/1.Scenes.md
@@ -1,5 +1,7 @@
 #Scenes
 
+On the left side of the page the available scenes are displayed that are available to you.
+
 ####All
 When ‘All’ is selected all available scene files will be shown on the overview page.
 <br /><br />
@@ -27,7 +29,7 @@ This can further be filtered on ascending or descending based on the date or alp
 This changes the way the thumb scenes of the scene files are displayed. You can either choose between small, large or list view.<br />
 The standard settings can be altered in the admin panel.
 
-![Display Type](/Doc/Designer/images/displaytype.png "Display Type")
+![Display Type](/Doc/5.Designer/images/displaytype.png "Display Type")
 <br /><br />
 
 ####Search
@@ -35,4 +37,4 @@ When you click on the small search icon you can enter the name or a part of the 
 Results matching your search criteria will pop-up instantly. The search results are not limited by just filenames.<br />
 You can even search for a word used in a label corresponding to a scene file, words that are used in the description or in the properties.
 
-![Search](/Doc/Designer/images/search.png "Search")
+![Search](/Doc/5.Designer/images/search.png "Search")
