--- a/doc/2.Scenes/1.Overview.md
+++ b/doc/2.Scenes/1.Overview.md
@@ -1,6 +1,6 @@
 #Overview page
 
-![DemoXPO Scene](/Doc/2.Scenes/images/DemoXPO_Scene.png "DemoXPO Scene")
+![DemoXPO Scene](images/DemoXPO_Scene.png "DemoXPO Scene")
 
 ####All
 When ‘All’ is selected all available scene files will be shown on the overview page.
@@ -19,7 +19,7 @@ When ‘Unlabeled’ is selected the scene files that not have been labeled yet 
 When ‘Favorite’ is selected all scenes files that are marked as favorite will be displayed. <br>
 No matter which favorite folder they belong too.
 
-![DemoXPO Sort](/Doc/2.Scenes/images/sort.png "DemoXPO Sort")
+![DemoXPO Sort](images/sort.png "DemoXPO Sort")
 <br><br>
 
 ####Add scene
@@ -27,7 +27,7 @@ When you click on the ‘Add Scene’ button a small window will pop-up allowing
  You can click on the ‘Choose file’ button to browse to your folders on your pc and select the desired file(s) by hand. <br>
  Or you can ‘drag and drop’ the file(s) to the Add Scene window and the upload process will begin automatically.
 
-![Add Scene](/Doc/2.Scenes/images/Add_Scene.png "Add Scene")
+![Add Scene](images/Add_Scene.png "Add Scene")
 <br><br>
 
 ####Labels
