Updated image-links for readme.

--- a/doc/4.Images/1.Overview.md
+++ b/doc/4.Images/1.Overview.md
@@ -19,7 +19,7 @@ When ‘Unlabeled’ is selected the image files that not have been labeled yet 
 When ‘Favorite’ is selected all image files that are marked as favorite will be displayed.<br/>
 No matter which favorite folder they belong too.
 
-![Sort](/Doc/4.Images/images/Sort.png "Sort")
+![Sort](images/Sort.png "Sort")
 <br/><br/>
 
 ####Add image
@@ -33,14 +33,14 @@ On the left side of the Image Overview page the available labels for the Images 
 The labels can be managed in the admin panel. When clicking on a label the corresponding image files will be shown. <br>
 You can drag and drop a label on top of an image file to assign that label to a specific image file.
 
-![Labels](/Doc/4.Images/images/Labels.png "Labels")
+![Labels](images/Labels.png "Labels")
 <br/><br/>
 
 ####Label Search
 When a lot of labels are available you can click on the small search icon to enter the name of the label you are looking for.<br/>
 The desired label will instantly show up when you type in (a part of) the word(s) corresponding to a label.
 
-![Search](/Doc/4.Images/images/Search.png "Search")
+![Search](images/Search.png "Search")
 <br/><br/>
 
 ####Sort
@@ -58,7 +58,7 @@ The ‘Select All’ buttons selects all available image files. This can be used
 This changes the way the thumb images of the image files are displayed. You can either choose between small, large <br/>
 or list view. The standard settings can be altered in the admin panel.
 
-![Display Type](/Doc/4.Images/images/Displaytype.png "Display Type")
+![Display Type](images/Displaytype.png "Display Type")
 <br/><br/>
 
 ####Search
@@ -66,7 +66,7 @@ When you click on the small search icon you can enter the name or a part of the 
 Results matching the search criteria will pop-up instantly. The search results are not only limited to the filename. <br/>
 You can even search for a word used in a label corresponding to a image file, words that are used in the description or in the properties.
 
-![Search](/Doc/4.Images/images/Search.png "Search")
+![Search](images/Search.png "Search")
 <br/><br/>
 
 ####File Information
@@ -93,11 +93,11 @@ You can create multiple favorite folders to store your favorite images in. Click
 You can drag and drop image files to the newly created folder. The available folders will be shown in the bottom <br/>
 right corner of the screen. PicarioXPO allows you to have up to six favorite folders per user account.
 
-![Favorite_Folders](/Doc/4.Images/images/Favorite_Folders.png "Favorite Folders")
+![Favorite_Folders](images/Favorite_Folders.png "Favorite Folders")
 <br/><br/>
 
 ####Properties filter
 The Properties Filter is displayed in the bottom left corner of the screen. The Properties filter shows all available properties<br/>
  that are marked as ‘Show in overview’. You can use the properties filter to search files based on the properties.
 
-![Properties Filter](/Doc/4.Images/images/Properties_filter.png "Properties Filter")
+![Properties Filter](images/Properties_filter.png "Properties Filter")
