--- a/doc/9.Render API/3.Designs.md
+++ b/doc/9.Render API/3.Designs.md
@@ -72,7 +72,7 @@ Constraint: **>= 0.0 & <= 1.0**
 
 The following images show the effect of different values for contrast.
 
-![Design contrast](/Doc/9.Render%20Api/images/texture_contrast.png "Design contrast")
+![Design contrast](images/TextureContrast.png "Design contrast")
 
 Example:
 
@@ -87,11 +87,11 @@ Constraint: **>= 0.0 & <= 1.0**
 
 The following images show the effect of different values for Drop X.
 
-![Design drop X](/Doc/9.Render%20Api/images/dropx.png "Design drop X")
+![Design drop X](images/DropX.png "Design drop X")
 
 The following images show the effect of different values for Drop Y.
 
-![Design drop Y](/Doc/9.Render%20Api/images/dropy.png "Design drop Y")
+![Design drop Y](images/DropY.png "Design drop Y")
 
 Example:
 
@@ -106,7 +106,7 @@ Constraint: **>= 0.0 & <= 1.0**
 
 The following images show the effect of different values for Placing Point X and Y.
 
-![Design placing point X and Y](/Doc/9.Render%20Api/images/placingpoint.png "Design placing point X and Y")
+![Design placing point X and Y](/images/PlacingPoint.png "Design placing point X and Y")
 
 Example:
 
