Reverted image path changes

--- a/doc/3.Designs/1.Overview.md
+++ b/doc/3.Designs/1.Overview.md
@@ -19,7 +19,7 @@ When ‘Unlabeled’ is selected the design files that not have been labeled yet
 When ‘Favorite’ is selected all design files that are marked as favorite will be displayed. <br/>
 No matter which favorite folder they belong too.
 
-![Sort](images/Sort.png "Sort")
+![Sort](/Doc/3.Designs/images/Sort.png "Sort")
 <br/><br/>
 
 ####Add Design
@@ -28,7 +28,7 @@ You can click on the ‘Choose file’ button to browse your pc and select the d
 Or you can ‘drag and drop’ the file(s) to the Add Design window and the upload process will begin automatically.<br/>
 The file types which are supported as designs are: pft, jpeg, png, bmp and tiff.
 
-![Add Design](images/Add_Design.png "Add Design")
+![Add Design](/Doc/3.Designs/images/Add_Design.png "Add Design")
 <br/><br/>
 
 ####Labels
@@ -36,7 +36,7 @@ On the left side of the Design Overview page the available labels for the Design
 The labels can be managed in the admin panel. When clicking on a label the corresponding design files will be shown.<br/>
 You can drag and drop a label on top of a design file to assign that label to a specific design file.
 
-![Labels](images/Labels.png "Labels")
+![Labels](/Doc/3.Designs/images/Labels.png "Labels")
 <br/><br/>
 
 ####Label Search
@@ -64,7 +64,7 @@ The ‘Select All’ buttons selects all available design files. This can be use
 This changes the way the thumb images of the design files are displayed. You can either choose between small, large or list view.<br/>
 The standard settings can be altered in the admin panel.
 
-![Displaytype](images/Displaytype.png "Displaytype")
+![Displaytype](/Doc/3.Designs/images/Displaytype.png "Displaytype")
 <br/><br/>
 
 ####Search
@@ -98,12 +98,12 @@ You can create multiple favorite folders to store your favorite designs. Click o
 You can drag and drop design files to the newly created folder. The available folders will be shown in the bottom right corner of the screen.<br/>
 PicarioXPO allows you to have six favorite folders per user account.
 
-![Favorite Folders](images/Favorite_folders.png "Favorite Folders")  
+![Favorite Folders](/Doc/3.Designs/images/favorite_folders.png "Favorite Folders")  
 <br/><br/>
 
 ####Properties filter
 The Properties Filter is displayed in the bottom left corner of the screen. The Properties filter shows all available properties that are marked as ‘Show in overview’.<br/>
 You could use the properties filter to search files based on the properties.
 
-![Properties Filter](images/Properties_filter.png "Properties Filter")  
+![Properties Filter](/Doc/3.Designs/images/properties_filter.png "Properties Filter")  
 <br/><br/>
