--- a/doc/3.Designs/2.Full Design Information.md
+++ b/doc/3.Designs/2.Full Design Information.md
@@ -9,7 +9,7 @@ The Overview tab shows a slightly larger version of the specific design image. I
 Furthermore if the design has been assigned to a default scene file, the visualized version of that design will also be visible in this tab.<br/>
 You can click on the Zoom button to open up the full image and zoom in / zoom out / move around the full version of the image.
 
-![Info Overview](images/Info_Overview.png "Info Overview")  
+![Info Overview](/Doc/3.Designs/images/Info_Overview.png "Info Overview")  
 <br/>
 
 ####Settings
@@ -17,27 +17,27 @@ The settings tab shows the display name of the design file, which you can alter 
 Furthermore the Reference ID is mentioned here which developers need when using the Render or Data API. When a design file has been <br/>
 modified outside of PicarioXPO you can use the overwrite scene option to exchange it with another version of the same design file.
 
-![Info Settings](images/Info_Settings.png "Info Settings")  
+![Info Settings](/Doc/3.Designs/images/Info_Settings.png "Info Settings")  
 <br/>
 
 ####Labels
 The labels tab shows all available labels and labels that are assigned to the design file. Click on a label to add it to the design file, <br/>
 it will be highlighted when assigned. Click on the small x on top of the label to remove the label from the design file.
 
-![Info Labels](images/Info_Labels.png "Info Labels")  
+![Info Labels](/Doc/3.Designs/images/Info_Labels.png "Info Labels")  
 <br/>
 
 ####Properties
 You can add property information or assign properties to the design file, depending on the properties that have been created.
 
-![Info Properties](images/Info_Properties.png "Info Properties")  
+![Info Properties](/Doc/3.Designs/images/Info_Properties.png "Info Properties")  
 <br/>
 
 ####Restrictions
 The restrictions tab lets you assign specific scene labels to the design file, restrict that design so it can only be used on specific scene files.<br/>
 For example, curtain fabrics can only be used on scene files labeled as window decoration. New labels can be added on the admin page.
 
-![Info Restrictions](images/Info_Restrictions.png "Info Restrictions")  
+![Info Restrictions](/Doc/3.Designs/images/Info_Restrictions.png "Info Restrictions")  
 <br/>
 
 ####Security
@@ -46,27 +46,27 @@ only the users which also have that/those role(s) assigned to their account can 
 
 <b>Important:</b> If a design doesn’t have any security roles, everyone will be able to see the design.
 
-![Info Security](images/Info_Security.png "Info Security")  
+![Info Security](/Doc/3.Designs/images/Info_Security.png "Info Security")  
 <br/>
 
 ####Default Scene
 A default scene file can be assigned to a design file. The design file will automatically be rendered on top of this default scene file.<br/>
 The visualized design on top of the default scene will be visible in the overview tab and when switching from 2D to 3D on the Design Overview page.
 
-![Info Default Scene](images/Info_Default_Scene.png "Info Default Scene")  
+![Info Default Scene](/Doc/3.Designs/images/Info_Default_Scene.png "Info Default Scene")  
 <br/>
 
 ####Attachments
 The attachments tab lets you add attachments to your design file. This can be everything from other images, product information, spec sheets, orders, etc.<br/>
 As long as the file is one of the following types: bmp, tiff, doc, docx, jpeg, pdf, png, rar, xls, xlsx or zip.
 
-![Info Attachment](images/Info_Attachment.png "Info Attachment")  
+![Info Attachment](/Doc/3.Designs/images/Info_Attachment.png "Info Attachment")  
 <br/>
 
 ####Relations
 The relations tab lets you connect a different design file to the selected design file, creating a relation between these design files allowing you to switch between them.
 
-![Info Relations](images/Info_Relations.png "Info Relations")  
+![Info Relations](/Doc/3.Designs/images/Info_Relations.png "Info Relations")  
 <br/>
 
 ####Rendering
@@ -75,7 +75,7 @@ Setup the gloss and contrast. Specify the direction of the texture when it is se
 Furthermore you can select where a design is placed in a scene file (left, middle, right, top and bottom) using the PlacingpointX and PlacingpointY values. <br/>
 With the repeat button you can specify if a design is a repeating pattern (yes or no).
 
-![Info Rendering](images/Info_Rendering.png "Info Rendering")  
+![Info Rendering](/Doc/3.Designs/images/Info_Rendering.png "Info Rendering")  
 <br/>
 
 ####Previous Design / Next Design
