Added documentation for the new aspect design parameter

--- a/doc/9.Render API/3.Designs.md
+++ b/doc/9.Render API/3.Designs.md
@@ -19,6 +19,7 @@ Using a specific url you can customize the way the design is rendered on the sce
 |p.trt 			| int	   | The rotation of the design.							    | 90, 180, 270 other values will be interpreted as 0 |
 |p.tf 			| bool	   | Whether the design should be flipped.					    | True or False                                      |
 |p.dc 			| int	   | Whether to use design cache.							    | True or False                                      |
+|p.ta 			| bool	   | Use this to render the design once using aspect ratio      | True or False (default is false)                   |
 
 *) **Required**
 <br /><br /><br />
@@ -55,13 +56,20 @@ Example:
 
 <br /><br />
 ####Design width and height('p.tw' & 'p.th')
-The width and/or height can be specified for a design. If both dimensions are specified the design will <br />
-be shrunk to keep the aspect ratio for the smallest version of the width and height. <br />
+The width and/or height can be specified for a design. <br />
 Either width or height needs to be supplied in order to render a design.<br />
 
 Example:
 
 	http://demo.picarioxpo.com/scenes-546/laura3-room.pfs?1=1&width=1000&Cache=Default&height=1000&p.tn=designs-2786/MO11-JeffreyPillow.jpg&p.tw=380&p.th=430
+	
+<br /><br />
+####Rendering a design using its aspect ratio ('p.ta')
+If you want to render a design based on its aspect, use the p.ta parameter. When using the aspect parameter you can only use either width or height. When you try to use both the server will return an error.<br />
+
+Example:
+
+	http://demo.picarioxpo.com/scenes-546/laura3-room.pfs?1=1&width=1000&Cache=Default&height=1000&p.tn=designs-2786/MO11-JeffreyPillow.jpg&p.tw=380&p.ta=1
 	
 <br /><br />
 ####Contrast('p.tc')
