--- a/doc/8.Data API/1.Entities.md
+++ b/doc/8.Data API/1.Entities.md
@@ -66,7 +66,7 @@ The developer needs viewing rights for all the document types he wants to use.
 		Multiple values for the same name result in an OR filter for that name
 		Multiple names result in an AND filter
 		Skip and take parameters work the same as with the stream API call
-		Example: /xpo/api/v1/designs/byproperties/material/cotton$silk
+		Example: /xpo/api/v1/designs/byproperties/material|cotton$silk
 <br />
 - GET &nbsp;&nbsp;&nbsp; /new/{skip}/{take}
 
