--- a/doc/8.Data API/4.Exhibit.md
+++ b/doc/8.Data API/4.Exhibit.md
@@ -1,11 +1,11 @@
 ﻿#XPO Developer API
 
-The developer needs the right to view the exhibit in order to access to exhibit.<br />
+The developer using the API (API key) will need to have access to exhibit in order to use these API functions.<br />
 
 <br />
 ####Exhibit
 - GET &nbsp;&nbsp;&nbsp; /xpo/api/v1/exhibit/
 		
-		Returns a list of all items that build the exhibit menu tree.
+		Returns a list of all the items that make up the exhibit menu tree.
 		This list contains all the menu items with their categories, subcategories and content items, and the data for each item.
-		It will also return all the exhibit settings that are set.
+		It will also return all the exhibit settings.
