Added documentation for the new search implementation

--- a/doc/3.Designs/1.Overview.md
+++ b/doc/3.Designs/1.Overview.md
@@ -69,7 +69,10 @@ The standard settings can be altered in the admin panel.
 
 ####Search
 When you click on the small search icon you can enter the name or a part of the name of the design you are looking for. Results matching your search criteria will pop-up instantly.<br/>
-The search results are not limited by just filenames. You can even search for a word used in a label corresponding to a design file, words that are used in the description or in the properties.
+The search results are not limited by just filenames. You can even search for a word used in a label corresponding to a design file, words that are used in the description or in the properties.<br/>
+To view detailed information about searching, please click on the Search tab on the left side.
+
+![Search](/Doc/4.Images/images/Search.png "Search")
 <br/><br/>
 
 ####File Information
