--- a/doc/4.Images/1.Overview.md
+++ b/doc/4.Images/1.Overview.md
@@ -64,7 +64,8 @@ or list view. The standard settings can be altered in the admin panel.
 ####Search
 When you click on the small search icon you can enter the name or a part of the name of the image you are looking for.<br/>
 Results matching the search criteria will pop-up instantly. The search results are not only limited to the filename. <br/>
-You can even search for a word used in a label corresponding to a image file, words that are used in the description or in the properties.
+You can even search for a word used in a label corresponding to a image file, words that are used in the description or in the properties.<br/>
+To view detailed information about searching, please click on the Search tab on the left side.
 
 ![Search](/Doc/4.Images/images/Search.png "Search")
 <br/><br/>
