--- a/doc/2.Scenes/1.Overview.md
+++ b/doc/2.Scenes/1.Overview.md
@@ -64,7 +64,9 @@ The standard settings can be altered in the admin panel.
 ####Search
 When you click on the small search icon you can enter the name or a part of the name of the scene you are looking for. Results matching <br>
 the description will pop-up instantly. But you are not only searching on the file name. You can even search for a word used in a label corresponding <br>
-to a scene file, words that are used in the description or in the properties.
+to a scene file, words that are used in the description or in the properties. To view detailed information about searching, please click on the Search tab on the left side.
+
+![Search](/Doc/4.Images/images/Search.png "Search")
 <br><br>
 
 ####File Information
