--- a/doc/6.Projects/1.Overview.md
+++ b/doc/6.Projects/1.Overview.md
@@ -58,7 +58,8 @@ The standard settings can be altered in the admin panel.
 ####Search
 When you click on the small search icon you can enter the name or a part of the name of the project you are looking for. <br/>
 Results matching the search criteria will pop-up instantly. The search results are not limited by just the filename.<br/>
-You can even search for a word used in a label corresponding to a project, words that are used in the description or in the properties.
+You can even search for a word used in a label corresponding to a project, words that are used in the description or in the properties.<br/>
+To view detailed information about searching, please click on the Search tab on the left side.
 
 ![Search](/Doc/6.Projects/images/search.png "Search")
 <br/><br/>
