Added correct documentation on the Integration API

--- a/doc/8.Data API/5.Integration.md
+++ b/doc/8.Data API/5.Integration.md
@@ -1,12 +1,42 @@
 ﻿#XPO Developer API
 
-The developer using the API (API key) will need to have access to integration module in order to use these API functions.<br /><br />
+Using the integration API you can import data into XPO. The import files for this API are the same as for the integration module.<br />
+The developer using the API (API key) will need to have access to integration module in order to use these API functions.<br />
 
 
-<br />
 ####Integration
-- GET &nbsp;&nbsp;&nbsp; /xpo/api/v1/exhibit/
+- GET &nbsp;&nbsp;&nbsp; /xpo/api/v1/integration/import/gettypes
 		
-		Returns a list of all the items that make up the exhibit menu tree.
-		This list contains all the menu items with their categories, subcategories and content items, and the data for each item.
-		It will also return all the exhibit settings.
+		Returns a list of all the types that can be used to import data. These types can be used for the documentType parameter.
+		
+- GET &nbsp;&nbsp;&nbsp; /xpo/api/v1/integration/import/getmatchcolumns/{documentType}
+		
+		Returns a list of all the columns that be used as a match column.
+		
+- POST &nbsp;&nbsp;&nbsp; /xpo/api/v1/integration/import/{documentType}
+		
+		Imports the uploaded file into a the specified document type.
+		Optional querystring parameters are:
+			simulate = Whether to simulate the import (default = true)
+			matchColumn = Which column must be used to match on (default = Id)
+			insertMissing = Whether to insert missing records (only possible on specific document types)
+			
+		Returns a detailed list per row with the results of the import process
+
+<br />		
+####Sample upload HTML form		
+
+		<form enctype="multipart/form-data" method="post" action="http://[XPO URL]/xpo/api/v1/integration/import/scenes?apikey=[API KEY]">
+			<fieldset>
+				<legend>Upload Form</legend>
+				<ol>                    
+					<li>
+						<label>Upload </label>
+						<input type="file" name="file" id="fileInput">                   
+					</li>
+					<li>
+						<input type="submit" value="Upload">
+					</li>
+				</ol>
+			</fieldset>
+		</form>
