Added rendermodes documentation

--- a/doc/9.Render API/1.Scenes.md
+++ b/doc/9.Render API/1.Scenes.md
@@ -13,6 +13,7 @@ Using a specific url you can customize the way the scene is rendered.
 |p.jsonName     | string   | The name of the variable the should be returned <br />to the caller when requesting coordinates. | 								  				  |
 |p.objectthumb  | int      | The id of the object of the scene. 															  | Ranges from 0 to the max objects of the scene - 1 |
 |p.frame        | int      | The id of the frame, for a multiframe scene. <br />Default is 1. 								  | Ranges from 1 to max frame number 				  |
+|p.mode         | int      | Which mode to use when rendering. 0 = Normal, 1 = Free Objects. <br />Default is 0.              | 0 or 1 							  				  |
 |mode           | string   | The rendering mode for the image. 																  | max, stretch, crop, canvas 						  |
 |p.coords       | int      | Whether you want to get the coordinates. 														  | 0 or 1 							  				  |
 |bgcolor        | string   | The background color for the image. 															  | Color name or hex color string 	  				  |
@@ -38,3 +39,7 @@ The `<scene_identifier>` can be specified in two ways:
 
 		http://demo.picarioxpo.com/scenes-546/laura3-room.pfs?1=1&width=1000
 		
+<br />
+####Render Modes
+There are 2 different render modes available (Normal & Free Objects). With the normal render mode the output will always be the entire scene.
+When using the 'Free Objects', only the used objects will be sent back. The output image will have the same width/height as with the normal mode, but will have a transparent background.
