Use actual URL to link to swagger documentation

--- a/doc/8.Data API V2/1.General.md
+++ b/doc/8.Data API V2/1.General.md
@@ -9,6 +9,4 @@ This API key can be used in two ways:
 2.	Add the API key to the http header (the header name is the same as the querystring parameter).
 
 <br />
-You can read all the API documentation in swagger: <br />
-
-	http://{hostname}/xpo/api/swagger
+[You can read all the API documentation in swagger](/xpo/api/swagger)
