Added SDK documentation

--- a/doc/10.Render API/2.Scenes.md
+++ b/doc/10.Render API/2.Scenes.md
@@ -13,6 +13,7 @@ Using a specific url you can customize the way the scene is rendered.
 |p.jsonName     | string   | The name of the variable the should be returned <br />to the caller when requesting coordinates. | 								  				  |
 |p.objectthumb  | int      | The id of the object of the scene. 															  | Ranges from 0 to the max objects of the scene - 1 |
 |p.frame        | int      | The id of the frame, for a multiframe scene. <br />Default is 1. 								  | Ranges from 1 to max frame number 				  |
+|p.fastrender   | bool     | Whether to use fast rendering. <br />Default is false.             							  | True or False					 				  |
 |p.mode         | int      | Which mode to use when rendering. 0 = Normal, 1 = Free Objects. <br />Default is 0.              | 0 or 1 							  				  |
 |mode           | string   | The rendering mode for the image. 																  | max, stretch, crop, canvas 						  |
 |p.coords       | int      | Whether you want to get the coordinates. 														  | 0 or 1 							  				  |
@@ -38,7 +39,11 @@ The `<scene_identifier>` can be specified in two ways:
 2. The scene id with the scene filename (the file needs to have the pfs extension)
 
 		http://demo.picarioxpo.com/scenes-546/laura3-room.pfs?1=1&width=1000
-		
+<br />
+####Fast Render
+When rendering a scene using large designs the rendering times can jump up quite a bit. In a lot of cases the applied designs only use a small portion of the scene. Even if the object is quite large you usually don't need the entire resolution of the design file.
+In those cases it's better to use the FastRender option which will internally switch to a smaller resolution for design files. 
+
 <br />
 ####Render Modes
 There are 2 different render modes available (Normal & Free Objects). With the normal render mode the output will always be the entire scene.
