Added new rotation documentation

--- a/doc/10.Render API/4.Designs.md
+++ b/doc/10.Render API/4.Designs.md
@@ -16,7 +16,7 @@ Using a specific url you can customize the way the design is rendered on the sce
 |p.tc 			| double   | The contrast of the design.							    | Between 0 and 1				  	                 |
 |p.tdx 			| double   | The drop x coordinate of the design.					    | Between 0 and < 1				  	                 |
 |p.tdy 			| double   | The drop y coordinate of the design.					    | Between 0 and < 1				  	                 |
-|p.trt 			| int	   | The rotation of the design.							    | 90, 180, 270 other values will be interpreted as 0 |
+|p.trt 			| int	   | The rotation of the design.							    | Value between 1 and 359 (0 and 360 are ignored)    |
 |p.tf 			| bool	   | Whether the design should be flipped.					    | True or False                                      |
 |p.dc 			| int	   | Whether to use design cache.							    | True or False                                      |
 |p.ta 			| bool	   | Use this to render the design once using aspect ratio      | True or False (default is false)                   |
